[gd_scene load_steps=15 format=2]

[ext_resource path="res://Menu/Menus/NumberOfPlayer.gd" type="Script" id=1]
[ext_resource path="res://Assets/font/new_styleboxflat.tres" type="StyleBox" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="NumberOfPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -193.0
margin_top = -115.0
margin_bottom = 115.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10

[node name="2 Player" type="Button" parent="VBoxContainer"]
margin_left = 46.0
margin_right = 146.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "2 Player"

[node name="3 Player" type="Button" parent="VBoxContainer"]
margin_left = 46.0
margin_top = 60.0
margin_right = 146.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 6 )
text = "3 Player"

[node name="4 Player" type="Button" parent="VBoxContainer"]
margin_left = 46.0
margin_top = 120.0
margin_right = 146.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 9 )
text = "4 Player"

[node name="Return" type="Button" parent="VBoxContainer"]
margin_left = 46.0
margin_top = 180.0
margin_right = 146.0
margin_bottom = 230.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = SubResource( 12 )
text = "Return"

[connection signal="pressed" from="VBoxContainer/2 Player" to="." method="_on_2_Player_pressed"]
[connection signal="pressed" from="VBoxContainer/3 Player" to="." method="_on_3_Player_pressed"]
[connection signal="pressed" from="VBoxContainer/4 Player" to="." method="_on_4_Player_pressed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
